[package]
name = "sb-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
description = "Core functionality for singbox-rust"
repository = "https://github.com/singbox-rust/singbox-rust"

[dependencies]
# 原有依赖（保留）
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
fastrand = "2.3"  # 新增：用于随机 jitter
futures = "0.3"
getrandom = "0.3"
hex = "0.4"
hmac = "0.12"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
lazy_static = "1.5"
libc = "0.2"
log = "0.4"
once_cell = "1.21"  # 新增：用于 lazy static
parking_lot = "0.12"
rand = "0.8"
regex = "1.10"
ring = "0.17"
rustls = "0.23"
sb-config = { path = "../sb-config" }
sb-metrics = { path = "../sb-metrics" }
sb-platform = { path = "../sb-platform" }
sb-types = { path = "../sb-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
smallvec = "1.15"  # 新增：用于小向量（如 DNS addrs）
socket2 = "0.6"  # 新增：用于 socket 配置
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
webpki-roots = "0.26"  # 新增：用于 TLS root certs
fail = { version = "0.5", optional = true }
notify = { version = "6.0", optional = true }
prometheus = { workspace = true }
metrics = { workspace = true }
# Protocol crypto helpers
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
md5 = "0.7"
hkdf = "0.12"
digest = "0.10"
# QUIC + HTTP client for DNS over HTTPS
quinn = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Additional dependencies for router functionality
ipnet = "2.7"
blake3 = "1.3"
flate2 = "1.0"  # For SRS binary decompression
lru = "0.12"    # For rule matching cache
glob = "0.3"
maxminddb = "0.23"
aho-corasick = "1.1"
rustls-pki-types = "1.0"
x509-parser = { version = "0.15", optional = true }
humantime = "2.1"
idna = { version = "0.5", optional = true }
thrussh = { version = "0.35", optional = true }
thrussh-keys = { version = "=0.22.1", optional = true }
loom = { version = "0.7", optional = true }

[dev-dependencies]
# Test dependencies
tempfile = "3"
tokio = { version = "1.47", features = ["full", "test-util"] }

[features]
# 基线：不默认开启任何可选功能，便于上层精确组合
default = []

# 历史/代码中出现过的功能位（按字母序归并；全部先落空数组，行为不变）
adapter            = []
analyze_json       = []
bench              = []
cache_stats        = []
cache_stats_hot    = []
cache_stats_wire   = []
chaos              = []
dev-cli            = []
dns_cache          = []
dns_doh            = []
dns_dot            = []
dns_http           = []
dns_udp            = []
dsl_analyze        = []
dsl_derive         = []
dsl_plus           = []
error-v2           = []
explain            = []
fuzzing            = []
handshake_alpha    = []
http_exporter      = []
labels             = []
metrics            = []
minijson           = []
obs                = []
out_hysteria2      = []
out_naive          = []
out_quic           = []
out_shadowtls      = []
out_ssh            = ["dep:thrussh", "dep:thrussh-keys"]
out_ss             = []
out_trojan         = []
out_tuic           = []
out_vless          = []
out_vmess          = []
out_wireguard      = []
preview            = []
preview_route      = []
router             = []
routing            = ["router"]  # routing as alias for router
rules_capture      = []
sbcore_analyze_json= []
sbcore_rules_tool  = []
scaffold           = []  # 满足 app 依赖
schema-v2          = []
selector_p3        = []
socks              = []
subs_clash         = []
subs_http          = []
subs_singbox       = []
tls_rustls         = ["dep:x509-parser"]  # rustls-based TLS, with x509-parser for pinning
geoip_hot          = []
geoip_mmdb         = []
idna               = ["dep:idna"]
json               = []
rand               = []
router_cache_explain = []
router_cache_lru_demo = []
router_cache_wire  = []
router_json        = []
router_keyword_ac  = []
router_keyword     = []
rule_coverage      = []
rules_tool         = []
suffix_trie        = []
tls                = []
loom               = ["dep:loom"]
failpoints         = ["dep:fail"]
resolv_conf        = ["dep:notify"]

# 你也可以在后续提交中，将这些特性与依赖绑定，例如：
# subs_http = ["sb-subscribe?/http"]  # 示例：当 sb-subscribe 提供 http 子特性时

[[bin]]
name = "rule-hot-reload"
required-features = ["router"]
