[package]
name = "sb-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "Apache-2.0"
description = "Core functionality for singbox-rust"
repository = "https://github.com/singbox-rust/singbox-rust"

[dependencies]
# 原有依赖（保留）
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
fastrand = "2.3"
futures = "0.3"
getrandom = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.3"
httparse = "1.8"
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "tcp"] }
lazy_static = "1.5"
libc = "0.2"
log = "0.4"
once_cell = "1.21"  # 新增：用于 lazy static
parking_lot = "0.12"
rand = "0.8"
regex = "1.10"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = "2.0"
sb-config = { path = "../sb-config" }
sb-metrics = { path = "../sb-metrics" }
sb-platform = { path = "../sb-platform", features = ["tun"] }
sb-tls = { path = "../sb-tls", default-features = false, features = ["utls"] }
sb-types = { path = "../sb-types" }
sb-transport = { path = "../sb-transport", default-features = false, features = ["transport_ws", "transport_h2", "transport_tls", "transport_httpupgrade", "transport_mux", "transport_grpc", "transport_wireguard"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
smallvec = "1.15"  # 新增：用于小向量（如 DNS addrs）
smoltcp = { version = "0.11", default-features = false, features = ["std", "log", "medium-ip", "medium-ethernet", "proto-ipv4", "proto-ipv6", "proto-dhcpv4", "socket-tcp", "socket-udp"] }
snow = "0.9"
socket2 = "0.6"  # 新增：用于 socket 配置
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "0.24", optional = true }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
webpki-roots = "0.26"  # 新增：用于 TLS root certs
fail = { version = "0.5", optional = true }
notify = { version = "6.0", optional = true }
prometheus = { workspace = true }
metrics = { workspace = true }
# Protocol crypto helpers
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
md5 = "0.7"
hkdf = "0.12"
digest = "0.10"
# QUIC + HTTP client for DNS over HTTPS
quinn = "0.11"
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Additional dependencies for router functionality
ipnet = "2.7"
blake3 = "1.3"
flate2 = "1.0"  # For SRS binary decompression
lru = "0.12"    # For rule matching cache
glob = "0.3"
maxminddb = "0.23"
aho-corasick = "1.1"
rustls-pki-types = "1.0"
x509-parser = { version = "0.15", optional = true }
humantime = "2.1"
idna = { version = "1.0", optional = true }
thrussh = { version = "0.35", optional = true }
thrussh-keys = { version = "=0.22.1", optional = true }
loom = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }

[dev-dependencies]
# Test dependencies
sb-test-utils = { path = "../sb-test-utils" }
tempfile = "3"
tokio = { version = "1.47", features = ["full", "test-util"] }
rcgen = "0.13"
criterion = "0.5"

[features]
# 默认开启 DNS 相关功能，开箱即用（udp/doh/dot/doq + rustls）
default = [
    "dns_udp",
    "dns_doh",
    "dns_dot",
    "dns_doq",
    "dns_dhcp",
    "dns_resolved",
    "dns_tailscale",
    "tls_rustls",
]

# 历史/代码中出现过的功能位（按字母序归并；全部先落空数组，行为不变）
analyze_json       = []
bench              = []
cache_stats        = []
cache_stats_hot    = []
cache_stats_wire   = []
chaos              = []
dev-cli            = []
dns_cache          = []
dns_doh            = ["dns_udp"]
dns_doh3           = ["dns_udp", "tls_rustls", "dep:h3", "dep:h3-quinn"]
dns_dot            = ["dns_udp", "tls_rustls"]
dns_doq            = ["dns_udp", "tls_rustls"]
dns_dhcp           = ["dep:notify"]
dns_http           = []
dns_udp            = []
dns_resolved       = ["dep:notify"]
dns_tailscale      = []
dsl_analyze        = []
dsl_derive         = []
dsl_plus           = []
error-v2           = []
explain            = []
fuzzing            = []
handshake_alpha    = []
http_exporter      = []
labels             = []
metrics            = []
minijson           = []
obs                = []
out_hysteria       = ["out_quic", "tls_rustls"]
out_hysteria2      = ["out_quic", "tls_rustls"]
out_naive          = []
out_quic           = []
out_shadowtls      = ["tls_rustls"]
out_ssh            = ["dep:thrussh", "dep:thrussh-keys"]
out_ss             = []
out_trojan         = []
out_tuic           = ["out_quic", "tls_rustls"]
out_vless          = []
out_vmess          = []
out_wireguard      = []
out_tailscale      = []
platform           = []
preview            = []
preview_route      = []
router             = []
routing            = ["router"]  # routing as alias for router
rules_capture      = []
sbcore_analyze_json= []
sbcore_rules_tool  = []
scaffold           = []  # 满足 app 依赖
schema-v2          = []
selector_p3        = []
socks              = []
subs_clash         = []
subs_http          = []
subs_singbox       = []
tls_rustls         = ["dep:x509-parser"]  # rustls-based TLS, with x509-parser for pinning
geoip_hot          = []
geoip_mmdb         = []
idna               = ["dep:idna"]
json               = []
rand               = []
router_cache_explain = []
router_cache_lru_demo = []
router_cache_wire  = []
router_json        = []
router_keyword_ac  = []
router_keyword     = []
rule_coverage      = []
rules_tool         = []
suffix_trie        = []
tls                = []
loom               = ["dep:loom"]
failpoints         = ["dep:fail"]
resolv_conf        = ["dep:notify"]
v2ray_transport    = []
service_ntp        = []
service_ssmapi     = ["dep:axum", "dep:axum-server"]
service_clash_api  = ["dep:axum"]
service_v2ray_api  = ["dep:axum"]
service_derp       = ["dep:tokio-tungstenite"]
service_resolved   = []
# Network monitor for tracking network changes (Linux netlink)
network_monitor    = []

# 你也可以在后续提交中，将这些特性与依赖绑定，例如：
# subs_http = ["sb-subscribe?/http"]  # 示例：当 sb-subscribe 提供 http 子特性时

[[bin]]
name = "rule-hot-reload"
required-features = ["router"]

[[example]]
name = "geosite_demo"
required-features = ["router"]

[[example]]
name = "router_eval"
required-features = ["router"]

[[example]]
name = "router_rules_probe"
required-features = ["router"]

[[example]]
name = "process_routing_demo"
required-features = ["router"]

[[example]]
name = "router_udp_balancer_probe"
required-features = ["router"]

[[example]]
name = "rule_hot_reload_demo"
required-features = ["router"]
