[package]
name = "sb-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "Apache-2.0"
description = "Core functionality for singbox-rust"
repository = "https://github.com/singbox-rust/singbox-rust"

[dependencies]
# 原有依赖（保留）
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
fastrand = "2.3"
futures = "0.3"
getrandom = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.3"
httparse = "1.8"
lazy_static = "1.5"
libc = "0.2"
log = "0.4"
once_cell = "1.21"  # 新增：用于 lazy static
parking_lot = "0.12"
publicsuffix = "2.2"
rand = "0.8"
regex = "1.10"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"], optional = true }
rustls-pemfile = { version = "2.0", optional = true }
sb-common = { path = "../sb-common" }
sb-config = { path = "../sb-config" }
sb-metrics = { path = "../sb-metrics" }
sb-platform = { path = "../sb-platform", features = ["tun"] }
sb-tls = { path = "../sb-tls", default-features = false, features = ["utls"] }
sb-types = { path = "../sb-types" }
sb-transport = { path = "../sb-transport", default-features = false, features = ["transport_ws", "transport_h2", "transport_tls", "transport_httpupgrade", "transport_mux", "transport_grpc_lite", "transport_wireguard"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
smallvec = "1.15"  # 新增：用于小向量（如 DNS addrs）
smoltcp = { version = "0.11", default-features = false, features = ["std", "log", "medium-ip", "medium-ethernet", "proto-ipv4", "proto-ipv6", "proto-dhcpv4", "socket-tcp", "socket-udp"] }
socket2 = "0.6"  # 新增：用于 socket 配置
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"], optional = true }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
webpki-roots = { version = "0.26", optional = true }
fail = { version = "0.5", optional = true }
notify = { version = "6.0", optional = true }
prometheus = { workspace = true }
metrics = { workspace = true }
# Protocol crypto helpers
aes = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
md5 = "0.7"
hkdf = "0.12"
digest = "0.10"
# QUIC + HTTP client for DNS over HTTPS
quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
# Additional dependencies for router functionality
ipnet = "2.7"
blake3 = "1.3"
flate2 = "1.0"  # For SRS binary decompression
lru = "0.16"    # For rule matching cache (RUSTSEC-2026-0002 fix)
glob = "0.3"
hickory-proto = "0.26"
maxminddb = "0.27" # RUSTSEC-2025-0132 fix
aho-corasick = "1.1"
rustls-pki-types = { version = "1.0", optional = true }
x509-parser = { version = "0.15", optional = true }
humantime = "2.1"
idna = { version = "1.0", optional = true }
# thrussh/thrussh-keys removed — SSH now handled by sb-adapters via russh
loom = { version = "0.7", optional = true }
prost = { version = "0.12", features = ["derive"] }
sled = "0.34.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Networking_WinSock", "Win32_System_IO"] }


[dev-dependencies]
# Test dependencies
sb-adapters = { path = "../sb-adapters", features = ["sb-transport", "router", "http", "adapter-http"] }
sb-test-utils = { path = "../sb-test-utils" }
tempfile = "3"
tokio = { version = "1.47", features = ["full", "test-util"] }
rcgen = "0.13"
criterion = "0.5"
prost = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[features]

# Default product closure: DNS transports, TLS, and canonical inbounds.
default = [
    "dns_udp",
    "dns_doh",
    "dns_dot",
    "dns_doq",
    "dns_dhcp",
    "dns_resolved",
    "dns_tailscale",
    "tls_rustls",
    "in_tun",
    "in_socks",
    "in_http",
    "in_mixed",
    "in_direct",
]

analyze_json       = [] # Gates router JSON-analysis helpers.
bench              = [] # Gates Criterion benchmark-only paths.
cache_stats        = [] # Gates router cache statistics API.
cache_stats_hot    = [] # Gates hot cache-statistics sampling.
cache_stats_wire   = [] # Gates cache-statistics wire export.
chaos              = [] # Gates deterministic chaos hooks.
dns_cache          = [] # Gates optional DNS cache behavior.
dns_doh            = ["dns_udp", "dep:reqwest"] # Gates DNS-over-HTTPS and reqwest.
dns_doh3           = ["dns_udp", "tls_rustls", "dep:h3", "dep:h3-quinn", "dep:quinn"] # Gates DNS-over-HTTP/3 dependencies.
dns_dot            = ["dns_udp", "tls_rustls"] # Gates DNS-over-TLS.
dns_doq            = ["dns_udp", "tls_rustls", "dep:quinn"] # Gates DNS-over-QUIC and quinn.
dns_dhcp           = ["dep:notify"] # Gates DHCP DNS discovery and file watching.
dns_udp            = [] # Gates UDP DNS transport.
dns_resolved       = ["dep:notify"] # Gates resolv.conf discovery and watching.
dns_tailscale      = [] # Gates Tailscale DNS upstream integration.
dsl_analyze        = [] # Gates route DSL analyzer.
dsl_derive         = [] # Gates route DSL derivation helpers.
dsl_plus           = [] # Gates extended route DSL syntax.
error-v2           = [] # Gates structured v2 error compatibility.
explain            = [] # Gates route explanation output.
fuzzing            = [] # Gates fuzz-target helper exports.
handshake_alpha    = [] # Gates experimental handshake instrumentation.
http_exporter      = ["metrics"] # Gates metrics HTTP exporter paths.
in_tun             = ["sb-platform/tun"] # Gates TUN inbound platform support.
in_socks           = [] # Gates core inbound type registration for SOCKS.
in_http            = [] # Gates core inbound type registration for HTTP.
in_mixed           = ["in_socks", "in_http"] # Gates mixed inbound registration.
in_direct          = [] # Gates direct inbound registration.
metrics            = [] # Gates metrics instrumentation paths.
platform           = [] # Gates platform-context routing inputs.
preview_route      = [] # Gates route preview API.
rules_capture      = [] # Gates expanded-rule capture.
sbcore_analyze_json= [] # Compatibility alias for JSON analysis tooling.
sbcore_rules_tool  = [] # Compatibility alias for rule tooling.
schema-v2          = [] # Gates schema-v2 compatibility paths.
socks              = [] # Gates SOCKS utility compatibility paths.
subs_clash         = [] # Gates Clash subscription compatibility helpers.
subs_http          = [] # Gates HTTP subscription compatibility helpers.
subs_singbox       = [] # Gates sing-box subscription compatibility helpers.
tls_rustls         = ["dep:x509-parser", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:webpki-roots", "dep:rustls-pki-types"] # Gates rustls TLS dependencies.
geoip_hot          = [] # Gates GeoIP hot reload.
geoip_mmdb         = [] # Gates MMDB-backed GeoIP matching.
idna               = ["dep:idna"] # Gates IDNA normalization dependency.
json               = [] # Gates router JSON compatibility helpers.
rand               = [] # Gates randomized router test/selection paths.
router_cache_explain = [] # Gates route-cache explanation data.
router_cache_lru_demo = [] # Gates LRU cache demonstration paths.
router_cache_wire  = [] # Gates route-cache wire export.
router_json        = [] # Gates router JSON bridge.
router_keyword_ac  = [] # Gates Aho-Corasick keyword acceleration.
rule_coverage      = [] # Gates rule coverage accounting.
rules_tool         = [] # Gates route rule CLI helpers.
tls                = [] # Gates legacy TLS compatibility branches.
loom               = ["dep:loom"] # Gates Loom concurrency tests.
failpoints         = ["dep:fail"] # Gates failpoint injection.
resolv_conf        = ["dep:notify"] # Gates resolv.conf watcher support.
v2ray_transport    = [] # Gates V2Ray transport compatibility paths.
service_ntp        = [] # Gates NTP service runtime.
service_ssmapi     = [] # Compatibility marker for external SSM API service.
service_clash_api  = [] # Compatibility marker for external Clash API service.
service_v2ray_api  = [] # Gates core V2Ray runtime hooks used by sb-api.
service_derp       = [] # Compatibility marker for external DERP service.
service_resolved   = ["dns_udp"] # Gates resolved service integration.
network_monitor    = [] # Gates network-change monitoring service.

[[bin]]
name = "rule-hot-reload"

[[example]]
name = "geosite_demo"

[[example]]
name = "router_eval"

[[example]]
name = "router_rules_probe"

[[example]]
name = "process_routing_demo"

[[example]]
name = "rule_hot_reload_demo"
