[package]
name = "sb-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.13"
once_cell = "1.19"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
