[package]
name = "sb-metrics"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
description = "Metrics and monitoring for singbox-rust"
repository = "https://github.com/singbox-rust/singbox-rust"

[dependencies]
prometheus = { version = "0.13", default-features = false }
once_cell = "1.19"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
