[package]
name = "sb-platform"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true, features = ["process", "fs", "io-util", "sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
log = "0.4"

# macOS native process matching
[target.'cfg(target_os = "macos")'.dependencies]
libproc = { version = "0.14", optional = true }

[dev-dependencies]
futures = "0.3"

[features]
linux = []
macos = []
windows = []
tun = []
native-process-match = ["libproc"]  # Enable native process matching API (macOS)
integration_tests = []
full = ["linux","macos","windows","tun"]
default = ["native-process-match"]
