[package]
name = "sb-platform"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true, features = ["process", "fs", "io-util", "sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
log = "0.4"

# macOS native process matching
[target.'cfg(target_os = "macos")'.dependencies]
libproc = { version = "0.14", optional = true }

# Windows native process matching
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
], optional = true }

[dev-dependencies]
futures = "0.3"

[features]
linux = []
macos = []
windows-sys = []
tun = []
native-process-match = ["dep:libproc", "dep:windows"]  # Enable native process matching API (macOS + Windows)
integration_tests = []
full = ["linux","macos","windows-sys","tun"]
default = ["native-process-match"]
