[package]
name = "sb-proto"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
# 现有协议特性保持不变
proto_ss2022 = []
proto_trojan_min = []
proto_trojan_dry = []
proto_ss2022_min = []
proto_ss2022_core = []
proto_ss2022_tls_first = ["proto_ss2022_min", "sb-transport/transport_tls"]
outbound_registry = ["proto_trojan_min","proto_ss2022_min","sb-transport/transport_tls"]
# 代码中用到但未显式声明的传输开关
transport_tls = []
# 如后续增加新协议子特性，可继续在此扩展：
# proto_ss2022 = []

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
bytes = "1"
blake3 = "1.5"
serde = { workspace = true, features = ["derive"] }
sb-transport = { path = "../sb-transport" }

[dev-dependencies]
tokio = { version = "1", features = ["rt","macros","io-util","time"] }
hex = "0.4"
