[package]
name = "sb-proto"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
outbound_registry = []

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
bytes = "1"
hex = { workspace = true }
sha2 = "0.10"
sb-transport = { path = "../sb-transport" }

[dev-dependencies]
tokio = { version = "1", features = ["rt","macros","io-util","time"] }
