[package]
name = "sb-runtime"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "time", "sync"] }
glob = "0.3"

[features]
default = []
handshake_alpha = []
io_local_alpha = ["handshake_alpha"]  # 仅作为功能开关标记；实现已在 tcp_local

[dev-dependencies]
tempfile = "3"
