[package]
name = "sb-tls"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pki-types = "1"
rcgen = "0.13"
webpki-roots = "0.26"

# Cryptography
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
x509-parser = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# ACME (optional)
instant-acme = { version = "0.7", optional = true }


# Logging
tracing = "0.1"
rustls-pemfile = { version = "2.2.0", optional = true }

[features]
default = ["reality", "utls"]
reality = []
ech = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
acme = ["dep:instant-acme", "dep:rustls-pemfile"]
utls = []  # uTLS client fingerprinting
rustls-pemfile = ["dep:rustls-pemfile"]


[lints]
workspace = true
