[package]
name = "sb-transport"
version = "0.1.0"
edition = "2021"

[features]
default = []
transport_tls = ["dep:rustls", "dep:tokio-rustls", "dep:webpki-roots"]
transport_quic = ["dep:quinn", "transport_tls"]
failpoints = ["dep:fail"]

[dependencies]
tokio = { workspace = true, features = ["net", "time", "io-util"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
pin-project-lite = "0.2"
sb-core = { path = "../sb-core" }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "tls12"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
webpki-roots = { version = "0.26", optional = true }
quinn = { version = "0.11", optional = true }
uuid = "1.0"
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
rand = "0.8"
sb-metrics = { path = "../sb-metrics" }
once_cell = { workspace = true }
fail = { version = "0.5", optional = true }
