[package]
name = "sb-transport"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
metrics = ["dep:prometheus"]
transport_tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:webpki-roots", "dep:sha2", "dep:hex", "dep:serde", "dep:serde_json"]
transport_reality = ["transport_tls", "dep:sb-tls"]
transport_ech = ["transport_tls", "dep:sb-tls", "sb-tls/ech"]
transport_quic = ["dep:quinn", "transport_tls"]
transport_ws = ["dep:tokio-tungstenite", "dep:http"]
transport_h2 = ["dep:h2", "dep:http"]
transport_grpc = ["dep:tonic", "dep:prost", "dep:async-stream", "transport_h2", "tonic-build"]
transport_mux = ["dep:yamux"]
transport_httpupgrade = []
failpoints = ["dep:fail"]

[dependencies]
tokio = { workspace = true, features = ["net", "time", "io-util"] }
tokio-stream = "0.1"
async-trait = { workspace = true }
thiserror = { workspace = true }
pin-project-lite = "0.2"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "tls12"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
rustls-pemfile = { version = "2.0", optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
webpki-roots = { version = "0.26", optional = true }
quinn = { version = "0.11", optional = true }
uuid = "1.0"
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { version = "0.7", features = ["compat", "io", "futures-io"] }
tracing = { workspace = true }
rand = "0.8"
base64 = "0.22"
sb-metrics = { path = "../sb-metrics" }
sb-tls = { path = "../sb-tls", optional = true }
once_cell = { workspace = true }
fail = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
http = { version = "1.0", optional = true }
h2 = { version = "0.4", optional = true }
tonic = { version = "0.12", optional = true, default-features = false, features = ["transport", "codegen", "prost"] }
prost = { version = "0.13", optional = true }
async-stream = { version = "0.3", optional = true }
yamux = { version = "0.13", optional = true }
prometheus = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(disabled_tests)'] }
