[package]
name = "sb-types"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "Apache-2.0"
description = "Core types and utilities for singbox-rust"
repository = "https://github.com/singbox-rust/singbox-rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
