[package]
name = "sb-types"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
description = "Core types and utilities for singbox-rust"
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
