[package]
name = "interop-lab"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
futures-util = "0.3"
hickory-proto = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2"
uuid = { workspace = true, features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws"] }
rcgen = "0.12"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }
